# clitools

./: .env  Cargo.toml
.rpm/: cltools.spec
src/: main.rs
